--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "form",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "url": "https://registry.npmjs.org"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
